[package]
name = "loco-tools"
version = "0.1.0"
authors = ["Björck <bjorck@ustwo.com>"]
edition = "2018"

[dependencies]
loco = { path = "loco-openapi-client" }
argh = "0.1.3"
futures = "0.1.16"
reqwest = "^0.10"
url = "1.5"
tokio = { version = "0.2", features = ["full"] }
exitcode = "1.1.2"
async-trait = "0.1.36"
xml-rs = "0.8"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
